--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <div class="row">
                     <div class="col-lg-10" data-aos="fade-up">
                         <h1 class="display-4 fw-bold data-aos="fade-up"">
-                            META <span class="text-brand">
+                            <span class="text-brand">
                                 FRONT-END DEVELOPER
                             </span>
-                            PROFESSINAL
+                            
                         </h1>
                         <P class="lead mt-2">I am Arshith Kumar, I completed my basis from Meta Front-end Developer in Coursera</P>
-                        <a href="#" class="btn btn-brand me-3">Explore my work</a>
+                        <a href="#work" class="btn btn-brand me-3">Explore my work</a>
                         <a href="#" class="link-custom">call:(9392-607-318)</a>
                     </div>
                 </div>
