changes made in html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link active" href="#experience">Experience</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#work">Work</a>
                 </li>
                 <li class="nav-item">
@@ -131,7 +134,7 @@
                     <div class="col-md-4">
                         <div class="card-custom rounded-4 shadow-effect bg-base" data-aos="fade-up" data-aos-delay="500" >
                             <div class="card-custom-image rounded-4">
-                                <img style="height:180px;" src="./info/img/dd.png">
+                                <img style="height:180px;" src="./info/img/dd.png" style="height: 25vh;">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h5>
@@ -146,7 +149,7 @@
                     <div class="col-md-4">
                         <div class="card-custom rounded-4 shadow-effect bg-base" data-aos="fade-up" data-aos-delay="500" >
                             <div class="card-custom-image rounded-4">
-                                <img src="./info/img/studnet.jpg">
+                                <img src="./info/img/studnet.jpg" style="height: 25vh;">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h5>
