--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-lg-10" data-aos="fade-up">
                         <h1 class="display-4 fw-bold data-aos="fade-up"">
                             <span class="text-brand">
-                                FRONT-END DEVELOPER
+                                FRONT-END DEVELOPER, Web Developer
                             </span>
                             
                         </h1>
