--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact">Contact - 9392607318</a>
                 </li>
             </ul>
             </div>
